--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
         <a class="nav-link active" href="map_nonres_0219.html">2002-2019 map NON-RES</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="map_res_nonres_0211.html">2002-2010 map RES and NON-RES</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link active" href="map_res_nonres_1119.html">2011-2019 map RES and NON-RES</a>
+        <a class="nav-link active" href="ca_map_0219.html">2002-2010 map both</a>
       </li>
     </ul>
   </div>
