--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </div>
 </nav>
 
-<div class="p-5 bg-secondary text-black text-center">
+<div class="p-5 bg-warning text-black text-center">
   <h3>Some problems that came up</h3>
   <p>In order to get the data on the map, you had to use fips codes that had to be merged with the data.</p> 
   <ul>
@@ -48,6 +48,13 @@
     </li>
   </ul>
 </div>
-
+<div class="p-5 bg-success text-black text-center">
+  <h3>Correction suggestions</h3>
+  <ul>
+    <li>
+      Data frame with years as columns and fips in rows.
+    </li>
+  </ul>
+</div>
 </body>
 </html>
